# demux10xHTO

./: Cargo.toml  README.md
src/: cellids.rs  geneids.rs  lib.rs  libs.rs  main.rs  sampleids.rs
src/cellids/: cellIDsError.rs  cell_data.rs  main_class.rs  mod.rs
testData/: .gitignore  HTOs.csv
testData/outpath/: Cell2Sample.n10000_HTO_S1_L001_R1_001.fastq.gz.tsv
