[package]
name = "demux10x"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
description = "Quantify simple reads in a 10x results data set"
homepage = "https://github.com/stela2502/demux10xHTO"
repository = "https://github.com/stela2502/demux10xHTO"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.66"
needletail = "0.4"
clap = { version = "3.0.14", features = ["derive"] }
csv = "1.1"
#serde = { version="1.0.103", features = ["derive", "Deserialize"] }
serde = "1.0.103"
flate2 = "1.0.24"
kmers = { git="https://github.com/COMBINE-lab/kmers" }
glob = "0.3.0"
regex = "1"
